--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "Oracle"
   ],
   "author": "chhenghua",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^4.19.1"
+  }
 }
